# cosmic-applet-logomenu

./: .gitignore  Cargo.toml  README.md  co.uk.cappsy.CosmicAppletLogoMenu.json  dev.cappsy.CosmicExtAppletLogoMenu.json  justfile  test-flatpak.json  vendor.tar
.cargo/: config.toml
applet/: Cargo.toml
applet/src/: app.rs  config.rs  main.rs  power.rs
cosmic-applet-logomenu__amd64/DEBIAN/: control
cosmic-applet-logomenu__amd64/usr/share/applications/: co.uk.cappsy.CosmicAppletLogoMenu.desktop
i18n/en/: cosmic_applet_logomenu.ftl  cosmic_logomenu_settings.ftl  liblog.ftl
i18n/es/: cosmic_logomenu_settings.ftl  liblog.ftl
i18n/pl/: liblog.ftl
i18n/sv/: cosmic_logomenu_settings.ftl  liblog.ftl
liblog/: Cargo.toml
liblog/i18n/en/: liblog.ftl
liblog/i18n/es/: liblog.ftl
liblog/src/: i18n.rs  lib.rs
res/: co.uk.cappsy.CosmicAppletLogoMenu.Settings.desktop  co.uk.cappsy.CosmicAppletLogoMenu.desktop  co.uk.cappsy.CosmicAppletLogoMenu.metainfo.xml  co.uk.cappsy.CosmicLogoMenuSettings.desktop  co.uk.cappsy.CosmicLogoMenuSettings.metainfo.xml  com.example.CosmicAppletLogoMenu.desktop  com.example.CosmicAppletLogoMenu.metainfo.xml  dev.cappsy.CosmicExtAppletLogoMenu.Settings.desktop  dev.cappsy.CosmicExtAppletLogoMenu.desktop  dev.cappsy.CosmicExtAppletLogoMenu.metainfo.xml
settings/: Cargo.toml  justfile
settings/i18n/en/: cosmic_logomenu_settings.ftl
settings/resources/: app.metainfo.xml
settings/src/: app.rs  config.rs  logos.rs  main.rs
src/: app.rs  logos.rs  main.rs
