[package]
name = "cosmic-applet-logomenu"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
rust-version = "1.80"

[dependencies]
i18n-embed-fl = "0.8"
open = "5.1.3"
rust-embed = "8.3.0"
phf = "0.11"
serde = "1.0.219"
zbus = { version = "4", default-features = false, features = ["tokio"] }
logind-zbus = "4.0"
rustix = { version = "0.38", features = ["process"] }

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["applet", "tokio", "wayland"]

[dependencies.i18n-embed]
version = "0.14"
features = ["fluent-system", "desktop-requester"]

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
