[workspace]
resolver = "3"
members = ['applet', "liblog", 'settings']

# This patch simple removes the logic that sets a different size for the icon if it's symbolic.
# This ensures symbolic icons are shown at full size.
# TODO: Fix this issue properly and kill this patch with fire.
[patch.'https://github.com/pop-os/libcosmic']
libcosmic = { git = "https://github.com/cappsyco/libcosmic", branch = "logomenu-patch" }
cosmic-config = { git = "https://github.com/cappsyco/libcosmic", branch = "logomenu-patch" }
#cosmic-config-derive = { git = "https://github.com/cappsyco/libcosmic", branch = "logomenu-patch" }
#cosmic-theme = { git = "https://github.com/cappsyco/libcosmic", branch = "logomenu-patch" }
