[package]
name = "cosmic-applet-logomenu"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
rust-version = "1.86.0"

[dependencies]
i18n-embed-fl = "0.9.2"
open = "5.1.3"
rust-embed = "8.5.0"
serde = "1.0.219"
zbus = { version = "4", default-features = false, features = ["tokio"] }
logind-zbus = "4.0"
rustix = { version = "0.38", features = ["process"] }
liblog = { path = "../liblog" }

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["applet", "tokio", "wayland"]

[dependencies.i18n-embed]
version = "0.15"
features = ["fluent-system", "desktop-requester"]

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
