[package]
name = "cosmic-applet-logomenu"
version = "0.4.0"
edition = "2024"
license = "GPL-3.0"
rust-version = "1.86.0"

[dependencies]
serde = "1.0.219"
zbus = { version = "4", default-features = false }
logind-zbus = "4.0"
rustix = { version = "0.38", features = ["process"] }
liblog = { path = "../liblog" }

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["applet", "wayland"]
