[package]
name = "cosmic-ext-applet-logomenu"
version = "0.6.6"
edition = "2024"
license = "GPL-3.0"

[dependencies]
serde = "1.0.219"
zbus = { version = "4", default-features = false }
logind-zbus = "4.0"
rustix = { version = "0.38", features = ["process"] }
liblog = { path = "../liblog" }

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["applet", "wayland"]

[features]
flatpak = []
