[package]
name = "liblog"
version = "0.6.6"
license = "GPL-3.0"
edition = "2024"

[dependencies]
i18n-embed-fl = "0.9.2"
rust-embed = "8.5.0"
phf = "0.11"
serde = "1.0.219"
cosmic-config = { git = "https://github.com/pop-os/libcosmic" }

[dependencies.i18n-embed]
version = "0.15"
features = ["fluent-system", "desktop-requester"]
