[package]
name = "cosmic-logomenu-settings"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
rust-version = "1.86.0"
description = "Settings application for COSMIC Logo Menu applet"
repository = "https://github.com/cappsyco/cosmic-applet-logomenu"

[build-dependencies]
vergen = { version = "8", features = ["git", "gitcl"] }

[dependencies]
i18n-embed-fl = "0.9.2"
rust-embed = "8.5.0"
serde = "1.0.219"
liblog = { path = "../liblog" }

[dependencies.i18n-embed]
version = "0.15"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
# See https://github.com/pop-os/libcosmic/blob/master/Cargo.toml for available features.
features = [
    # Accessibility support
    "a11y",
    # Uses cosmic-settings-daemon to watch for config file changes
    "dbus-config",
    # Support creating additional application windows.
    "multi-window",
    # On app startup, focuses an existing instance if the app is already open
    "single-instance",
    # Windowing support for X11, Windows, Mac, & Redox
    "winit",
    # Add Wayland support to winit
    "wayland",
    # GPU-accelerated rendering
    "wgpu",
]

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
