[package]
name = "cosmic-ext-logomenu-settings"
version = "0.6.6"
edition = "2024"
license = "GPL-3.0"
description = "Settings application for COSMIC Logo Menu applet"
repository = "https://github.com/cappsyco/cosmic-ext-applet-logomenu"

[build-dependencies]
vergen = { version = "8", features = ["git", "gitcl"] }

[dependencies]
i18n-embed-fl = "0.9.2"
rust-embed = "8.5.0"
serde = "1.0.219"
liblog = { path = "../liblog" }
rfd = "0.15.4"
sysinfo = "0.37.0"
open = "5.3.0"

[dependencies.i18n-embed]
version = "0.15"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
features = [
    "a11y",
    "about",
    "multi-window",
    "single-instance",
    "winit",
    "wayland",
    "wgpu",
    "tokio"
]

[features]
default = ["xdg-portal"]
xdg-portal = ["libcosmic/xdg-portal"]
